Simplifies code by utilizing sequenced collection helpers